[package]
name = "gear-node"
version = "0.1.0"
authors = ["Gear Technologies"]
description = "Gear Node"
edition = "2018"
license = "GPL-3.0"
build = "build.rs"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear"
rust-version = "1.56"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "gear-node"

[dependencies]
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
structopt = "0.3.25"
hex-literal = "0.3.4"

sc-cli = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol", features = [
	"wasmtime",
] }
sp-core = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol", features = [
	"wasmtime",
] }
sc-service = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol", features = [
	"wasmtime",
] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
pallet-gear-rpc = { path = "../pallets/gear/rpc" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }

# Internal
gear-runtime = { path = "../runtime" }
gear-test-cli = { path = "../utils/gear-test-cli" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gsobol" }

[features]
default = []
runtime-benchmarks = ["gear-runtime/runtime-benchmarks"]
debug-mode = ["gear-runtime/debug-mode"]
